fetch employee data API and minor changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,46 +48,15 @@ employee-service.default.limit=10
 employee-service.search.max.limit=50
 persister.migration.batch.count.topic=migartion-batch-count
 
-#Localization config
-egov.localization.host=http://quickstart.dev-tattvafoundation.org
-egov.localization.workDir.path=/localization/messages/v1
-egov.localization.context.path=/localization/messages/v1
-egov.localization.search.endpoint=/_search
-egov.localization.statelevel=true
-
-#mdms urls
-egov.mdms.host=http://quickstart.dev-tattvafoundation.org
-egov.mdms.search.endpoint=/egov-mdms-service/v1/_search
+#SAP config
+egov.SAP.UserName=RFC_USER1
+egov.SAP.password=Chain$ys!1
+egov.SAP.search.employee.URL=https://piprdci.mcgm.gov.in:50001/RESTAdapter/UPYOG/Empdetail
 
 #hrms urls
 egov.hrms.host=http://quickstart.dev-tattvafoundation.org
 egov.hrms.search.endpoint=/egov-hrms/employees/_search
 egov.hrms.create.endpoint=/egov-hrms/employees/_create
-egov.hrms.UserName=RFC_USER1
-egov.hrms.password=Chain$ys!1
-egov.hrms.search.employee.URL=https://piprdci.mcgm.gov.in:50001/RESTAdapter/UPYOG/Empdetail
-
-#User config
-egov.user.host=http://quickstart.dev-tattvafoundation.org
-egov.user.context.path=/user/users
-egov.user.create.path=/_createnovalidate
-egov.user.search.path=/user/_search
-egov.user.update.path=/_updatenovalidate
-
-#Idgen Config
-egov.idgen.host=http://quickstart.dev-tattvafoundation.org/
-egov.idgen.path=egov-idgen/id/_generate
-
-#Workflow config
-is.workflow.enabled=true
-egov.workflow.host=http://localhost:8080
-egov.workflow.transition.path=/egov-workflow-v2/egov-wf/process/_transition
-egov.workflow.businessservice.search.path=/egov-workflow-v2/egov-wf/businessservice/_search
-egov.workflow.processinstance.search.path=/egov-workflow-v2/egov-wf/process/_search
-
-#url shortner
-egov.url.shortner.host=http://quickstart.dev-tattvafoundation.org
-egov.url.shortner.endpoint=/egov-url-shortening/shortener
 
 egov.sms.notification.topic=egov.core.notification.sms
 kafka.topics.receipt.create=dss-collection
